2008-12-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9596: htmlArea RTE does not work in IRRE subelements

2008-12-16  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9925: Initialization of new caching framework breaks some eID scripts

2008-12-15  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9844: Filepermissons (RW) in filelist are hardcoded

2008-12-12  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9884: enhancements to memcached caching backend

2008-12-09  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9915: Typing error in tslib_content ($gifCreateor => $gifCreator)

2008-12-08  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9890: sectionIndex in Menu doesn't work

2008-12-03  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #6415: preg_replace error on PHP 5.2 sometimes resulting in empty pages (thanks to Francois Suter)

2008-12-02  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9878: htmlArea RTE: js error may be raised when loading through IRRE Ajax call

2008-12-02  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #6131: 'last login' of BE and FE users not shown in the BE (thanks to Christian Kuhn)
	* Fixed bug #9850: Strings 'TEMP' and 'RECYCLER' are hardcoded in the filetree (thanks to Stefano Kowalke)

2008-12-02  Dmitry Dulepov  <dmitry@typo3.org>

	* Added feature #9852: Provide a random byte generator in TYPO3 Core (thanks to Marcus Crause)

2008-12-01  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9645: Memcached backend is not working properly
	* Fixed bug #9790: class.gzip_encode.php fails with	open_basedir restrictions
	* Fixed bug #9859: Upload files in fileadmin: Singular and plural are the same ("files") (co-authored with Stefano Kowalke)
	* Fixed bug #9860: Fileadmin: New folders: Singular and plural are the same ("folders") (co-authored with Stefano Kowalke)

2008-12-01  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9864: felogin: Drop languages from locallang.xml
