@@ -1,6 +1,7 @@
 2008-12-17  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #9596: htmlArea RTE does not work in IRRE subelements
+	* Added feature #7963: htmlArea RTE css parsing: honour classes with element context selectors inside other context selectors (thanks to Mikkel Ricky)
 
 2008-12-02  Stanislas Rolland  <typo3@sjbr.ca>
 
